# Marketplace-Image-Processor

./: LICENSE  README.md  pyproject.toml
models/params/blip/: adapter_config.json
notebooks/: [BLIP TUNNING].ipynb  [BLIP_FineTune].ipynb  [Dataset_preparation].ipynb  [U2Net_Test].ipynb
src/: start_page.py
src/applications/: apply_bg.py
src/data/: image_preprocessing.py
src/models/blip/: blip_init.py  blip_model_utils.py
src/models/madlad400/: madlad400_init.py  translate.py
src/models/u2net/: __init__.py  model_utils.py  u2net_init.py  u2net_model.py  u2net_model_utils.py  u2net_processor.py
src/streamlit_front/: start_page.py
src/streamlit_front/pages/: first_page.py  second_page.py  third_page.py
