[tool.poetry]
name = "marketplace-image-processor"
version = "0.1.0"
description = ""
authors = ["Vladislav Vinokurov <vinokurov.va@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
