[tool.poetry]
name = "marketplace-image-processor"
version = "0.1.0"
description = ""
authors = ["Vladislav Vinokurov <vinokurov.va@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
torchvision = "^0.19.1"
scikit-image = "^0.24.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
